--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,23 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  http: ^0.13.4
-  html: ^0.15.0
-  url_launcher: ^6.1.0
+
+  # For Provider
   provider: ^6.0.2
+
+  # For Rest API
+  http: ^0.13.4
+
+  # For Web Scrapping
+  html: ^0.15.0
+
+  # In order to launch url links
+  url_launcher: ^6.1.0
+
+  # For Profile Images
   cached_network_image: ^3.2.0
+
+  # For Local DB
   hive: ^2.1.0
   hive_flutter: ^1.1.0
 
